manifests/bookorbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
  namespace: bookorbit
spec:
  type: ClusterIP
  selector:
    app: bookorbit
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: bookorbit-postgres
  namespace: bookorbit
spec:
  type: ClusterIP
  selector:
    app: bookorbit-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
